2005-04-27  Owen Taylor  <otaylor@redhat.com>

	* src/icimage.c (pixman_image_set_clip_region): Set
	image->pCompositeClip here.
	(IcComputeCompositeRegion) src/icrect.c (pixman_color_rects):
	Remove workaround clipping to the clientClip.

2005-04-27  Owen Taylor  <otaylor@redhat.com>

	* src/ic.c: Don't use pixman_compositeSrc_8888x8888 when
	the source is x8r8g8b8 or x8b8g8r8.

2005-03-29  T Rowley  <tim.rowley@gmail.com>

	* src/pixman.h: add AIX to the test for inttypes.h

2005-03-11  Owen Taylor  <otaylor@redhat.com>

	* src/icformat.c (pixman_format_init): Set format->depth
	correctly instead of just using the bpp.

2005-03-07  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment version to 0.1.4-head post-snapshot.

	* RELEASING: Add notes on using -head suffix for PIXMAN_VERSION.

	* NEWS: Add notes for snapshot 0.1.4.

	* configure.in: Increment version to 0.1.4.

2005-03-04  Carl Worth  <cworth@cworth.org>

	* src/ictrap.c (pixman_composite_trapezoids): Intersect bounds of
	trapezoids with the bounds of the destination surface before
	creating an intermediate surface.

2005-03-04  Carl Worth  <cworth@cworth.org>

	* src/ictrap.c (pixman_composite_trapezoids): Add comment from
	xserver's mitrap.c.

2005-03-04  David Reveman  <davidr@novell.com>

	* src/pixman.h: 
	* src/ictrap.c: Add pixman_add_trapezoids.

2005-03-03  Carl Worth  <cworth@cworth.org>

	* src/icimage.c (miIsSolidAlpha): Port from render/mipict.c.

	* src/ictrap.c (pixman_composite_trapezoids): Merge in
	optimization from render/mitrap.c for op==ADD and solid alpha src.

2005-03-03  Carl Worth  <cworth@cworth.org>

	* src/pixman-xserver-compat.h (BoxRec, BoxPtr, Bool, TRUE, FALSE):
	Add a few more things that might be helpful when moving more files
	over from xserver.

2005-03-03  Carl Worth  <cworth@cworth.org>

	* src/icint.h:
	* src/ictrap.c: Move definitions of MIN and MAX macros from
	ictrap.c to icint.h.

2005-03-03  Carl Worth  <cworth@cworth.org>
